pemFioi/quickAlgo/quickAlgo-mobileFirst.css
/* ... */
h2.sectionTitle .icon {
  color: #fff;
  background-color: #4a90e2;
  border-radius: 50%;
  width: 2em;
  line-height: 2em;
  text-align: center;
  font-size: 14px;
  vertical-align: text-bottom;
  margin-right: 10px;
}
p {
  margin: 0 0 15px 0;
}
#task {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-pack: stretch;
      -ms-flex-pack: stretch;
          justify-content: stretch;
  height: 100vh;
  width: 100vw;
}
#taskContent {
  -webkit-box-flex: 2;
      -ms-flex: 2 0 0px;
          flex: 2 0 0;
  position: static !important;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: stretch;
      -ms-flex-pack: stretch;
          justify-content: stretch;
  min-height: 0;
}
#introGrid {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
      -ms-flex: 1 1 40%;
          flex: 1 1 40%;
  min-height: 0;
}
#taskIntro {
  padding: 10px 20px;
  overflow: auto;
}
#gridContainer {
  background-color: #fff;
  -webkit-box-flex: 1;
      -ms-flex: 1 0 50%;
          flex: 1 0 50%;
  width: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
}

@media /* Mobiles */
  screen and (max-width: 767px) and (orientation: portrait),
  screen and (min-width: 480px) and (max-width: 854px) and (orientation: landscape) {
  .mode-player #taskContent {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
  }
  .mode-player #introGrid {
    -webkit-box-flex: 1;
    -ms-flex: 1 0 40%;
        flex: 1 0 40%;
  }
  .mode-instructions #introGrid {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    width: 100%;
  }
  .mode-instructions #taskIntro {
    -webkit-box-ordinal-group: 3;
        -ms-flex-order: 2;
            order: 2;
    -webkit-box-flex: 1;
        -ms-flex: 1 1 0px;
            flex: 1 1 0;
  }
  .mode-player #taskIntro,
  .mode-instructions #blocklyLibContent,
  .mode-editor #introGrid {
    display: none;
  }
  .mode-player #editorBar {
    display: none !important;
  }
  .mode-instructions .errorMessage,
  .mode-player .errorMessage.errorMessageLock {
    display: none;
  }
}

@media /* Landscape mobiles */
  screen and (min-width: 480px) and (max-width: 854px) and (orientation: landscape) {

  #taskContent {
    background-color: #fff;
  }
  .mode-player #taskContent {
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
        -ms-flex-direction: row;
            flex-direction: row;
  }
  .mode-player #introGrid {
    min-width: 0;
    -webkit-box-flex: 0;
        -ms-flex: 0 0 50%;
            flex: 0 0 50%;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
  }
  .mode-instructions #introGrid {
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  }
  .mode-editor #editorBar {
    display: none;
  }
  .fullscreen .mode-editor #editorBar {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
  }
  #taskIntro {
    background-color: #f1f2f7;
    padding: 15px;
    overflow: auto;
    border-radius: 5px 5px 0 0;
    margin: 10px 10px 0 10px;
  }
  #gridContainer #gridButtonsAfter {
    padding-bottom: 5px;
  }
  .mode-instructions #introGrid {
    -webkit-box-flex: 1;
      -ms-flex: 1 0 40%;
          flex: 1 0 40%;
  }
  .mode-instructions #gridContainer {
    min-width: 0;
    -webkit-box-flex: 0;
        -ms-flex: 0 0 40%;
            flex: 0 0 40%;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
  }
  .mode-player #blocklyLibContent {
    -webkit-box-flex: 0;
        -ms-flex: 0 0 60%;
            flex: 0 0 60%;
    min-width: 0;
    margin: 10px 10px 0 10px;
  }
}
@media /* Tablets portrait */
  screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {

  #taskContent {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
  }
  #introGrid {
    position: relative;
    margin-bottom: 10px;
    -webkit-box-flex: 1;
        -ms-flex: 1 1 auto;
            flex: 1 1 auto;
  }
  #introGrid .speedControls {
    position: absolute;
    bottom: -10px;
    left: 0;
    width: 40%; /* Must be the same width as the task intro */
    padding-top: 10px;
    border-top: 3px solid #fff;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: space-evenly;
        -ms-flex-pack: space-evenly;
      justify-content: space-evenly;
    background-color: #f1f2f7;
    -webkit-box-shadow: 0 1px 0 0px #ccc inset;
            box-shadow: 0 1px 0 0px #ccc inset;
  }
  #taskIntro {
    -webkit-box-flex: 1;
        -ms-flex: 1 1 40%;
            flex: 1 1 40%;
    background-color: #fff;
    padding-bottom: 50px;
  }
  #gridContainer {
    -webkit-box-flex: 1;
        -ms-flex: 1 0 60%;
            flex: 1 0 60%;
    min-width: 0;
  }
}
/* ... */

